--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <app-header></app-header>
-
+<div class="container">
   <h1>{{title}}</h1>
   <ul>
     <li>{{curso}}</li>
     <li>profesor:{{profesor}}</li>
    
   </ul>
+</div>
+  
+  <app-footer></app-footer>
