--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
 <app-header></app-header>
 <div class="container">
   <h1>{{title}}</h1>
-  <ul>
-    <li>{{curso}}</li>
-    <li>profesor:{{profesor}}</li>
-   
-  </ul>
+ <app-clientes></app-clientes>
 </div>
   
   <app-footer></app-footer>
