--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,8 +1,8 @@
-<div class="card border-primary mb-3" >
+<div class="card border-primary mb-3 mt-3" >
     <div class="card-header">Clientes</div>
     <div class="card-body text-primary">
       <h5 class="card-title">Listado de Clientes</h5>
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered table-striped ">
             <thead>
                 <tr>
                     <th>id</th>
