--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,8 +1,14 @@
-<div class="card border-primary mb-3 mt-3" >
+<div class="card border-primary mb-3 mt-3">
     <div class="card-header">Clientes</div>
     <div class="card-body text-primary">
-      <h5 class="card-title">Listado de Clientes</h5>
-        <table class="table table-bordered table-striped ">
+        <h5 class="card-title">Listado de Clientes</h5>
+
+        <div class="my-2 text-left">
+            <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']">Crear
+                Cliente</button>
+        </div>
+
+        <table class="table table-bordered table-striped  ">
             <thead>
                 <tr>
                     <th>id</th>
@@ -10,6 +16,9 @@
                     <th>Apellido</th>
                     <th>Email</th>
                     <th>Fecha</th>
+                    <th>
+                        Editar
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -19,9 +28,12 @@
                     <td>{{cliente.apellido}}</td>
                     <td>{{cliente.email}}</td>
                     <td>{{cliente.createAt}}</td>
+                    <td>
+                        <button type="button" name="button" [routerLink]="['/clientes/form',cliente.id]" class="btn btn-primary">Editar</button>
+                    </td>
                 </tr>
             </tbody>
-           
+
         </table>
     </div>
-  </div>
+</div>
