--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -7,8 +7,10 @@
             <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']">Crear
                 Cliente</button>
         </div>
-
-        <table class="table table-bordered table-striped  ">
+        <div *ngIf="clientes?.length == 0" class="alert alert-info">
+            No hay registros en la base de datos!
+        </div>
+        <table class="table table-bordered table-striped"  *ngIf="clientes?.length>0">
             <thead>
                 <tr>
                     <th>id</th>
@@ -19,6 +21,10 @@
                     <th>
                         Editar
                     </th>
+                    <th>
+                        Eliminar 
+                    </th>
+
                 </tr>
             </thead>
             <tbody>
@@ -29,7 +35,10 @@
                     <td>{{cliente.email}}</td>
                     <td>{{cliente.createAt}}</td>
                     <td>
-                        <button type="button" name="button" [routerLink]="['/clientes/form',cliente.id]" class="btn btn-primary">Editar</button>
+                        <button type="button" name="editar" [routerLink]="['/clientes/form',cliente.id]" class="btn btn-primary">Editar</button>
+                    </td>
+                    <td>
+                        <button type="button" name="eliminar" (click)='delete(cliente)' class="btn btn-danger">Eliminar</button>
                     </td>
                 </tr>
             </tbody>
