--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-.footer{
-     position: absolute ; 
-      bottom: 0px;
-      height: 60px;
-      width: 100%;
-  }
+html{
+    position: relative;
+    min-height: 100%;
+}
+body{
+    margin-bottom: 60px;
+}
