--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -30,8 +30,8 @@
             <tbody>
                 <tr *ngFor="let cliente of clientes">
                     <td>{{cliente.id}}</td>
-                    <td>{{cliente.nombre}}</td>
-                    <td>{{cliente.apellido}}</td>
+                    <td>{{cliente.nombre | uppercase}}</td>
+                    <td>{{cliente.apellido | uppercase}}</td>
                     <td>{{cliente.email}}</td>
                     <td>{{cliente.createAt}}</td>
                     <td>
